<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.FarmerActivity"
    tools:showIn="@layout/activity_farmer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_background"
                android:orientation="vertical">

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="30dp"
                            android:layout_marginTop="30dp"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="100dp"
                                    android:layout_height="wrap_content"
                                    android:text="Farmer Name " />

                                <Spinner
                                    android:id="@+id/spinnerFarmerList"
                                    android:layout_width="100dp"
                                    android:layout_height="wrap_content" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="100dp"
                                    android:layout_height="wrap_content"
                                    android:text="Farmer Cpde " />

                                <EditText
                                    android:id="@+id/farmer_code"
                                    android:layout_width="100dp"
                                    android:layout_height="wrap_content" />

                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="360dp"
                            android:layout_height="90dp"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/farmer_btn_detail"
                                style="@style/home_btn"
                                android:text="@string/farmer_detail" />

                            <Button
                                android:id="@+id/farmer_btn_land_detail"
                                style="@style/home_btn"
                                android:text="@string/farmer_land" />

                            <Button
                                android:id="@+id/farmer_btn_crop_detail"
                                style="@style/home_btn"
                                android:text="@string/farmer_crop" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="360dp"
                            android:layout_height="90dp"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/farmer_cert_detail"
                                style="@style/home_btn"
                                android:text="@string/farmer_cert" />

                            <Button
                                android:id="@+id/farmer_sanction_detail"
                                style="@style/home_btn"
                                android:text="@string/farmer_san" />

                            <Button
                                android:id="@+id/farmer_sanction_detail2"
                                style="@style/home_btn"
                                android:text="@string/farmer_san2" />
                        </LinearLayout>
                    </LinearLayout>
                </ScrollView>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>